# Cubanoid

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  main.cpp
headers/: Cube.hpp  OatServer.hpp  Point.hpp  PolarPoint.hpp  SmartPoint.hpp
src/: arrows_cube.cpp  self_moving_cube.cpp
